--- a/admin/view/template/extension/dashboard/d_seo_module_target_keyword_refresh.twig
+++ b/admin/view/template/extension/dashboard/d_seo_module_target_keyword_refresh.twig
@@ -1,6 +1,6 @@
 <div id="{{ codename }}" class="panel panel-default">
 	<div class="panel-heading">
-		<h3 class="panel-title"><i class="fa fa-signal"></i> {{ heading_title }} {{ text_heading_info }}</h3>
+		<h3 class="panel-title"><i class="fa fa-key"></i> {{ heading_title }} {{ text_heading_info }}</h3>
 	</div>
 	<div class="panel-body">
 		<ul class="nav nav-tabs stores">
