--- a/admin/view/template/extension/module/d_seo_module/export_import.twig
+++ b/admin/view/template/extension/module/d_seo_module/export_import.twig
@@ -37,10 +37,10 @@
 						<a href="{{ href_setting }}"><span class="fa fa-cog"></span> {{ text_settings }}</a>
 					</li>
 					<li>
-						<a href="{{ href_field_setting }}"><span class="fa fa-list-alt"></span> {{ text_multi_store_field_settings }}</a>
+						<a href="{{ href_multi_store_field }}"><span class="fa fa-list-alt"></span> {{ text_multi_store_fields }}</a>
 					</li>
 					<li>
-						<a href="{{ href_custom_page }}"><span class="fa fa-key"></span> {{ text_custom_pages_target_keywords }}</a>
+						<a href="{{ href_target_keyword }}"><span class="fa fa-key"></span> {{ text_target_keywords }}</a>
 					</li>
 					<li class="active">
 						<a href="{{ href_export_import }}"><span class="fa fa-exchange"></span> {{ text_export_import }}</a>
@@ -51,7 +51,7 @@
 				</ul>
 				
 				<div class="flex row">
-					<div class="col-sm-2">
+					<div class="flex col-sm-3">
 						<ul class="nav nav-pills nav-stacked">
 							<li class="active">
 								<a href="#vtab_export" data-toggle="tab"><span class="fa fa-download"></span> {{ text_export }}</a>
@@ -61,7 +61,7 @@
 							</li>
 						</ul>
 					</div>
-					<div class="col-sm-10">
+					<div class="col-sm-9">
 						<div class="tab-content">
 							<div id="vtab_export" class="tab-pane active">
 								<div class="page-header">
@@ -69,8 +69,8 @@
 								</div>
 								<form action="{{ export }}" method="post" enctype="multipart/form-data" id="form_export" class="form-horizontal">
 									<div class="form-group">
-										<label class="col-sm-2 control-label" for="input-store">{{ entry_store }}</label>
-										<div class="col-sm-10 form-inline">
+										<label class="col-sm-3 control-label" for="input-store">{{ entry_store }}</label>
+										<div class="col-sm-9 form-inline">
 											<select name="store_id" class="form-control">
 											{% for store in stores %}
 											{% if (store['store_id'] == store_id) %}
@@ -83,14 +83,14 @@
 										</div>
 									</div>
 									<div class="form-group">
-										<label class="col-sm-2 control-label" for="input-sheet">{{ entry_sheet }}</label>
-										<div class="col-sm-10">
-											<input type="checkbox" name="sheet_codes[]" value="custom_page" class="switch" data-label-text="{{ text_custom_pages }}" checked="checked"/> <span class="info-window-item" data-href="https://opencartseomodule.com/export-import-for-custom-page-keywords"><i class="fa fa-question"></i></span>
+										<label class="col-sm-3 control-label" for="input-sheet">{{ entry_sheet }}</label>
+										<div class="col-sm-9">
+											<input type="checkbox" name="sheet_codes[]" value="target_keyword" class="switch" data-label-text="{{ text_target_keywords }}" checked="checked"/> <span class="info-window-item" data-href="https://opencartseomodule.com/export-import-for-custom-page-keywords"><i class="fa fa-question"></i></span>
 										</div>
 									</div>	
 									<div class="form-group">
-										<label class="col-sm-2 control-label">{{ entry_export }}</label>
-										<div class="col-sm-10">
+										<label class="col-sm-3 control-label">{{ entry_export }}</label>
+										<div class="col-sm-9">
 											<a id="button_export" class="btn btn-primary">{{ button_export }}</a>
 										</div>
 									</div>	
@@ -102,14 +102,14 @@
 								</div>
 								<form action="{{ import }}" method="post" enctype="multipart/form-data" id="form_import" class="form-horizontal">
 									<div class="form-group">
-										<label class="col-sm-2 control-label">{{ entry_upload }}</label>
-										<div class="col-sm-10">
+										<label class="col-sm-3 control-label">{{ entry_upload }}</label>
+										<div class="col-sm-9">
 											<input type="file" name="upload" id="upload"/>
 										</div>
 									</div>
 									<div class="form-group">
-										<label class="col-sm-2 control-label" for="input-store">{{ entry_store }}</label>
-										<div class="col-sm-10 form-inline">
+										<label class="col-sm-3 control-label" for="input-store">{{ entry_store }}</label>
+										<div class="col-sm-9 form-inline">
 											<select name="store_id" class="form-control">
 											{% for store in stores %}
 											{% if (store['store_id'] == store_id) %}
@@ -122,8 +122,8 @@
 										</div>
 									</div>
 									<div class="form-group">
-										<label class="col-sm-2 control-label">{{ entry_import }}</label>
-										<div class="col-sm-10">
+										<label class="col-sm-3 control-label">{{ entry_import }}</label>
+										<div class="col-sm-9">
 											<a id="button_import" class="btn btn-primary">{{ button_import }}</a>
 										</div>
 									</div>	
