--- a/admin/view/template/extension/module/d_seo_module/multi_store_field.twig
+++ b/admin/view/template/extension/module/d_seo_module/multi_store_field.twig
@@ -39,10 +39,10 @@
 						<a href="{{ href_setting }}"><span class="fa fa-cog"></span> {{ text_settings }}</a>
 					</li>
 					<li class="active">
-						<a href="{{ href_field_setting }}"><span class="fa fa-list-alt"></span> {{ text_multi_store_field_settings }}</a>
+						<a href="{{ href_multi_store_field }}"><span class="fa fa-list-alt"></span> {{ text_multi_store_fields }}</a>
 					</li>
 					<li>
-						<a href="{{ href_custom_page }}"><span class="fa fa-key"></span> {{ text_custom_pages_target_keywords }}</a>
+						<a href="{{ href_target_keyword }}"><span class="fa fa-key"></span> {{ text_target_keywords }}</a>
 					</li>
 					<li>
 						<a href="{{ href_export_import }}"><span class="fa fa-exchange"></span> {{ text_export_import }}</a>
@@ -54,7 +54,7 @@
 				
 				<form action="{{ action }}" method="post" enctype="multipart/form-data" id="form" class="form-horizontal">
 					<div class="flex row">
-						<div class="col-sm-2">
+						<div class="flex col-sm-3">
 							<ul class="nav nav-pills nav-stacked">
 								{% for sheet in field_setting['sheet'] %}
 								<li {% if (sheet == field_setting['sheet']|first) %}class="active"{% endif %}>
@@ -63,7 +63,7 @@
 								{% endfor %}
 							</ul>
 						</div>
-						<div class="col-sm-10">
+						<div class="col-sm-9">
 							<div class="tab-content">
 								{% for sheet in field_setting['sheet'] %}
 								<div id="vtab_{{ sheet['code'] }}" class="tab-pane {% if (sheet == field_setting['sheet']|first) %}active{% endif %}">
