--- a/admin/view/stylesheet/d_seo_module.css
+++ b/admin/view/stylesheet/d_seo_module.css
@@ -30,8 +30,9 @@
 	color: #2478cd;
 }
 .panel-default .panel-body .page-header {
-	margin-top: 30px;
-	margin-bottom: 30px;
+	margin: 30px 0px;
+	padding: 0px 0px;
+	border: none;
 }
 .panel-default .panel-body .page-header h3 {
 	font-weight: bold;
