--- a/admin/view/template/extension/module/d_seo_module/dashboard.twig
+++ b/admin/view/template/extension/module/d_seo_module/dashboard.twig
@@ -110,7 +110,7 @@
 												<a action="{{ control_element['edit_href'] }}" confirm="{{ control_element['confirm'] }}" class="button-edit btn btn-sm btn-success">{{ button_setup }}</a>
 											</div>
 											<div class="col-sm-9">
-												<h4 class="name m-b-sm"><label class="control-label p-n"><span data-toggle="tooltip" title="{{ control_element['description'] }}">{{ control_element['name'] }}</span></label></h4>
+												<h4 class="name m-b-sm"><label class="control-label p-n text-left"><span data-toggle="tooltip" title="{{ control_element['description'] }}">{{ control_element['name'] }}</span></label></h4>
 												<p class="extension-name">{{ control_element['extension_name'] }}</p>
 												<a href="{{ control_element['href'] }}" target="_blank" class="details">{{ text_details }}</a>
 												<br class="clear"/>
@@ -148,7 +148,7 @@
 												<a action="{{ control_element['edit_href'] }}" confirm="{{ control_element['confirm'] }}" class="button-edit btn btn-sm btn-primary">{{ button_resetup }}</a>
 											</div>
 											<div class="col-sm-9">
-												<h4 class="name m-b-sm"><label class="control-label p-n"><span data-toggle="tooltip" title="{{ control_element['description'] }}">{{ control_element['name'] }}</span></label></h4>
+												<h4 class="name m-b-sm"><label class="control-label p-n text-left"><span data-toggle="tooltip" title="{{ control_element['description'] }}">{{ control_element['name'] }}</span></label></h4>
 												<p class="extension-name">{{ control_element['extension_name'] }}</p>
 												<a href="{{ control_element['href'] }}" target="_blank" class="details">{{ text_details }}</a>
 												<br class="clear"/>
