--- a/admin/view/template/extension/module/d_seo_module/dashboard.twig
+++ b/admin/view/template/extension/module/d_seo_module/dashboard.twig
@@ -167,6 +167,8 @@
 						</table>
 					</div>
 				</form>
+				<br class="clear" />
+				<div class="p-lg text-center">{{ text_powered_by }}</div>
 			</div>
 		</div>
 		<div class="info-window">
