--- a/admin/view/template/extension/module/d_seo_module/instruction.twig
+++ b/admin/view/template/extension/module/d_seo_module/instruction.twig
@@ -51,6 +51,7 @@
 				</ul>
 				
 				<div class="instruction"></div>
+				<div class="p-lg text-center">{{ text_powered_by }}</div>
 			</div>
 		</div>
 	</div>
