--- a/admin/view/template/extension/module/d_seo_module/multi_store_field.twig
+++ b/admin/view/template/extension/module/d_seo_module/multi_store_field.twig
@@ -99,6 +99,7 @@
 						</div>
 					</div>
 				</form>
+				<div class="p-lg text-center">{{ text_powered_by }}</div>
 			</div>
 		</div>
 		<div class="info-window">
