--- a/admin/view/template/extension/module/d_seo_module/export_import.twig
+++ b/admin/view/template/extension/module/d_seo_module/export_import.twig
@@ -132,6 +132,7 @@
 						</div>
 					</div>
 				</div>
+				<div class="p-lg text-center">{{ text_powered_by }}</div>
 			</div>
 		</div>
 		<div class="info-window">
