--- a/admin/view/template/extension/module/d_seo_module/setting.twig
+++ b/admin/view/template/extension/module/d_seo_module/setting.twig
@@ -152,6 +152,7 @@
 						</div>
 					</div>
 				</form>
+				<div class="p-lg text-center">{{ text_powered_by }}</div>
 			</div>
 		</div>
 		<div class="info-window">
