--- a/admin/view/template/extension/module/d_seo_module/target_keyword.twig
+++ b/admin/view/template/extension/module/d_seo_module/target_keyword.twig
@@ -151,6 +151,7 @@
 						<div class="col-sm-6 text-right">{{ results }}</div>
 					</div>	
 				</form>
+				<div class="p-lg text-center">{{ text_powered_by }}</div>
 			</div>
 		</div>
 		<div class="info-window">
